Switch blackstick box on tournament view to icon
Switch the black stick box to a font-awesome icon instead of background
color so that printed versions will be black. Background color is pretty
much universally ignored by printing.

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -17,7 +17,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
   <!-- site specific css -->
   <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css">
