--- a/app/templates/show_tournament.html
+++ b/app/templates/show_tournament.html
@@ -128,7 +128,7 @@
 								{% endif %}
 								</td>
 								<td>
-									<div class="color-box" style="background-color: #000000;"></div><span class="{{game.style_b}}">{{ game.black }}</span>
+									<i class="fas fa-square-full stick-color stick-black"></i><span class="{{game.style_b}}">{{ game.black }}</span>
 									{% if game.black_flag -%}
 									<img src="{{ game.black_flag.thumb }}" class="flag-thumb pull-right" >
 									{%- endif %}
