--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -45,12 +45,12 @@ tr.odd {
 }
 
 .color-box {
-    width: 10px;
-    height: 10px;
+    width: 1em;
+    height: 1em;
     display: inline-block;
-    background-color: #ccc;
-    margin-right: 5px;
-    top: 5px;
+	vertical-align: text-top;
+    background-color: #FFFFFF;
+    margin-right: 4px;
     border-style: solid;
     border-width: 1px;
 }
@@ -121,6 +121,14 @@ img.flag-thumb {
 .game-time {
 	font-weight: bold;
 }
+
+.stick-color {
+	padding-right: 4px;
+}
+
+.stick-white {
+	background-color: #FFFFFF;
+}
 @media screen and (max-width: 1000px) {
 	#team_nav{
 		visibility: hidden;
@@ -165,14 +173,36 @@ img.flag-thumb {
 		font-size: 10px;
 	}
 
+	h1 {
+		font-size: 24px;
+	}
 	.gamerow tr {
 		page-break-inside: avoid;
 	}
 
 	.table {
-		page-break-after: always;
+		/*page-break-after: always;*/
 		padding: 0;
 		margin: 0;
+	}
+
+	#games {
+		page-break-after: always;
+	}
+
+	#team_nav {
+		visibility: hidden;
+		display: none;
+	}
+
+	#tabNav {
+		visibility: hidden;
+		display: none;
+	}
+
+	.team-flag {
+		visibility: hidden;
+		display: none;
 	}
 }
 
