--- a/app/templates/show_home.html
+++ b/app/templates/show_home.html
@@ -13,6 +13,11 @@
 					<div class="page-header tournament-header">
 						<h1 class="tournament-title">UWHScores Home</h1>
 					</div>
+					<div class="well">
+						<h3> CMAS Worlds 2018 </h3>
+						<p> Welcome world underwater hockey fans. The 20th CMAS World Underwater Hockey schedule is now up.</p>
+						<h4><a href="/t/worlds2018"> See it here <i class="fas fa-arrow-circle-right"></i> </a></h4>
+					</div>
 					<p class=lead>
 						Welcome to UWHScores.com, the source for major US underwater hockey tournament schedules, scores and standings.
 					<p>
@@ -49,7 +54,7 @@
 				<div class="feature-item col-md-4">
 						<span class="fa-stack fa-4x">
 						<i class="fa fa-circle fa-stack-2x feature-circle"></i>
-						<i class="fa fa-sort-numeric-asc fa-stack-1x text-primary"></i>
+						<i class="fa fa-sort-numeric-down fa-stack-1x text-primary"></i>
 						</span>
 						<h4>
 						<strong>Standings in Real Time</strong>
