Standings display is now one table per group
Improvements to the standings display tables to show individual tables
with the group name as a header, this saves on horizontal space since
we no longer need the div and pod in each row.

Also linting of the views_main.py file.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -135,6 +135,15 @@ img.flag-thumb {
 		display: none;
 	}
 
+	#tabNav li {
+		padding: 10px 0px;
+	}
+
+	#tabNav li a {
+		padding-left: 8px;
+		padding-right: 8px;
+	}
+
 	h1 {
 		font-size:20px;
 	}
