--- a/app/templates/show_home.html
+++ b/app/templates/show_home.html
@@ -12,15 +12,17 @@
 				<div class="col-md-12">
 					<div class="page-header tournament-header">
 						<h1 class="tournament-title">UWHScores Home</h1>
+						<p class=lead>
+							Welcome to UWHScores.com, the source for major US underwater hockey tournament schedules, scores and standings.
+						<p>
 					</div>
 					<div class="well">
-						<h3> CMAS Worlds 2018 </h3>
+						<h3>20th CMAS Worlds 2018 </h3>
+						<img class="tournament-banner" src="/static/flags/worlds2018/tournament_banner.png">
 						<p> Welcome world underwater hockey fans. The 20th CMAS World Underwater Hockey schedule is now up.</p>
 						<h4><a href="/t/worlds2018"> See it here <i class="fas fa-arrow-circle-right"></i> </a></h4>
 					</div>
-					<p class=lead>
-						Welcome to UWHScores.com, the source for major US underwater hockey tournament schedules, scores and standings.
-					<p>
+
 					<p>
 						UWHScores.com provides a source for both players and tournament organizers to get valuable information about tournaments
 						as they happen. Players can follow their teams schedule, which is updated continuously throughout the tournament, and standings.
