Fix for team name on roster view

--- a/app/templates/show_tournament.html
+++ b/app/templates/show_tournament.html
@@ -263,7 +263,7 @@
 
 			{% if team_info and team_info.roster -%}
 			<div id="roster" class="tab-pane fade">
-				<h1>{{ titleText }} Roster</h1>
+				<h1>{{ title_text }} Roster</h1>
 				<table id=roster_tbl class="table table-striped">
 					<thead>
 						<tr>
