Adding coaches to roster view and date_created to players
Added a date_created field to the player entries, makes it easier to
roll back if I need to and generally a good thing to have.

--- a/app/templates/show_tournament.html
+++ b/app/templates/show_tournament.html
@@ -280,6 +280,20 @@
 						{% endfor -%}
 					</tbody>
 				</table>
+				<table id=coaches_tbl class="table table-striped">
+					<thead>
+						<tr>
+							<th>Coaches</th>
+						</tr>
+					</thead>
+					<tbody>
+						{%- for coach in team_info.coaches|sort %}
+						<tr>
+							<td>{{ coach.name }}</td>
+						</tr>
+						{% endfor -%}
+					</tbody>
+				</table>
 			</div>
 			{%- endif %}
 	</div> <!-- tabContent -->
