--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -7,9 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if tournament -%}
     <meta name="description" content="UWHScores for {{ tournament.name }} - Follow game results and check updated standings throughout the day.">
+    {% if tournament.sm_logo -%}
+    <meta property="og:image" content="{{ tournament.sm_logo }}" />
+    {%- endif %}
     {% else %}
     <meta name="description" content="UWHScores for tournaments - Follow game results and check updated standings throughout the day.">
     {% endif %}
+
     <meta name="author" content="">
 	<title>Underwater Hockey Scores</title>
 
