Update to standings help text to explain win-loss-tie format

--- a/app/templates/show_tournament.html
+++ b/app/templates/show_tournament.html
@@ -213,10 +213,10 @@
 				Teams earn two points for each win,
 				{%- endif %}
 				and one point for a tie.</br>
-				<strong>Record -</strong> Record in games played for points in standing </br>
-				<strong>GA -</strong> Goals allowed in games played for standings, used as tie breaker </br>
-				<strong>GP -</strong> Games played for standings </br>
-				<strong>Overall -</strong> Total tournament record including non-standings games and brackets
+				<strong>Record -</strong> Record in games played for points in standing. Wins-Losses-Ties. </br>
+				<strong>GA -</strong> Goals allowed in games played for standings, used as tie breaker. </br>
+				<strong>GP -</strong> Games played for standings. </br>
+				<strong>Overall -</strong> Total tournament record including non-standings games and brackets. Wins-Losses-Ties.
 				</p>
 				<p>
 				For more information on how standings are calculated and tie-breakers please see the <a href=/faq>FAQ</a>
