Fix print view so it doesn't refresh to old TV view

--- a/app/templates/show_print.html
+++ b/app/templates/show_print.html
@@ -1,4 +1,4 @@
-{% extends "tv_layout.html" %}
+{% extends "print_layout.html" %}
 
 {% block tabs %}
 <div id="page_body" class="container" style="margin-left:2em">
