Fix bug in team list where full schedule would take you to index instead of tournament

--- a/app/templates/show_tournament.html
+++ b/app/templates/show_tournament.html
@@ -35,7 +35,7 @@
 			{{ team.name }}
 		</a>
 		{%- endfor %}
-		<a class="list-group-item list-group-item-info" href="/">Full Schedule</a>
+		<a class="list-group-item list-group-item-info" href="/t/{{ tournament.short_name }}">Full Schedule</a>
 	</div>
 	{% else %}
 	<div class="col-md-4">
