--- a/app/templates/show_print.html
+++ b/app/templates/show_print.html
@@ -31,7 +31,7 @@
 					<td>{{ game.day }} {{ game.start_time }}</td>
 					<td>{{ game.pool }}</td>
 					{% if game.pod_color %}
-						<td style="background-color:{{ game.pod_color }}">{{ game.pod }}</td>
+						<td style="background-color:{{ game.pod_color }} !important">{{ game.pod }}</td>
 					{% else %}
 						<td>{{ game.pod }} </td>
 					{% endif %}
