--- a/app/templates/nav_bar.html
+++ b/app/templates/nav_bar.html
@@ -28,7 +28,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Divisions<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            {% for div in divisions %}
+                            {% for div in divisions|sort %}
                                 {% if div.name -%}
                                 <li><a href="/t/{{ tournament.short_name }}/div/{{ div.id }}">{{ div.name }}</a></li>
                                 {% else %}
