Template rename and text fix

--- a/app/templates/show_coming_soon.html
+++ b/app/templates/show_coming_soon.html
@@ -12,7 +12,7 @@
   <div class="jumbotron">
     <h2 class="tournament-title">{{ tournament.name }}</h2>
     <h4 class="tournament-info">{{ tournament.location }} - {{ tournament.date_string }}</h4>
-    <p>Tournament details coming soon, check back soon.<p>
+    <p>Tournament details coming soon, please check back later.<p>
   </div>
 </div>
 {% endblock main %}
