--- a/app/templates/show_coming_soon.html
+++ b/app/templates/show_coming_soon.html
@@ -14,5 +14,8 @@
     <h4 class="tournament-info">{{ tournament.location }} - {{ tournament.date_string }}</h4>
     <p>Tournament details coming soon, please check back later.<p>
   </div>
+	<ol class="breadcrumb">
+		<li><a href="/"> <i class="fa fa-chevron-left"></i> Home</a></li>
+	</ol>
 </div>
 {% endblock main %}
