Adding placings to show division pages

--- a/app/templates/show_tournament.html
+++ b/app/templates/show_tournament.html
@@ -62,7 +62,7 @@
 		<ul id=tabNav class="nav nav-pills">
 			<li role="presentation" class="active btn-lg" ><a href="#schedule" data-toggle="tab">Schedule</a></li>
 			<li role="presentation" class="btn-lg"><a href="#standings" data-toggle="tab">Standings</a></li>
-			{% if placings %}<li role="presentation" class="btn-lg"><a href="#places" data-toggle="tab">Places</a></li>{% endif %}
+			{% if placings %}<li role="presentation" class="btn-lg"><a href="#places" data-toggle="tab">Placings</a></li>{% endif %}
 			{% if team_info and team_info.roster %}<li role="presentation" class="btn-lg"><a href="#roster" data-toggle="tab">Roster</a></li>{% endif %}
 		</ul>
 
