Adding some more text to explain standings

--- a/app/templates/faq.html
+++ b/app/templates/faq.html
@@ -54,7 +54,7 @@
 					<h3 class="panel-title">Q: How do I understand the standings?</h3>
 				</div>
 				<div class="panel-body">
-				<p>The standings update in real time as the games progress. This way players can better
+				<p>The standings update in real time as the games progress and include tie breakers. This way players can better
 				understand where their team stands and what the potential brackets might look like.</p>
 				<p>
 				In addition to division, pod and team name, the fields on the standing are:
