--- a/app/templates/show_tournament.html
+++ b/app/templates/show_tournament.html
@@ -220,7 +220,7 @@
 				<strong>Overall -</strong> Total tournament record including non-standings games and brackets. Wins-Losses-Ties.
 				</p>
 				<p>
-				For more information on how standings are calculated and tie-breakers please see the <a href=/faq>FAQ</a>
+				Standings are update as games are updated and includes all tie breakers. For more information on how standings are calculated and tie-breakers please see the <a href=/faq>FAQ</a>
 				</p>
 			</div>
 			</div>
