--- a/app/templates/nav_bar.html
+++ b/app/templates/nav_bar.html
@@ -28,7 +28,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Divisions<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            {% for div in divisions|sort %}
+                            {% for div in divisions|sort(attribute="name") %}
                                 {% if div.name -%}
                                 <li><a href="/t/{{ tournament.short_name }}/div/{{ div.id }}">{{ div.name }}</a></li>
                                 {% else %}
@@ -42,7 +42,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pods<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            {% for pod in pods -%}
+                            {% for pod in pods|sort(attribute="name") -%}
                                 {% if pod.name -%}
                                 <li><a href="/t/{{ tournament.short_name }}/pod/{{ pod.id }}">{{ pod.name }}</a></li>
                                 {% else %}
@@ -56,7 +56,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Teams<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            {% for team in team_list -%}
+                            {% for team in team_list|sort(attribute="name") -%}
                             <li><a href="/t/{{ tournament.short_name }}/team/{{ team.team_id  }}">{{ team.name }}</a></li>
                             {%- endfor %}
                         </ul>
