Moved score update paths
Moved the path for the update scores to more align with the API style
and other admin paths. Scores are now updated at
/admin/t/<short_name>/scores for the full list and then adding
/<game_id> to the path for specific game updates.

Scores page now defaults to hiding entered scores and can be toggled
back on.

--- a/app/templates/admin/tournament_admin.html
+++ b/app/templates/admin/tournament_admin.html
@@ -42,7 +42,7 @@
 					<h3 class="panel-title"><i class="fa fa-fw fa-edit"></i>Update Scores</h3>
 				</div>
 				<div class="panel-body">
-						<p><a class="btn btn-primary btn-lg" href="/admin/update?tid={{tournament.tid}}" role="button">Update Scores</a></p>
+						<p><a class="btn btn-primary btn-lg" href="/admin/t/{{tournament.short_name}}/scores" role="button">Update Scores</a></p>
 				</div>
 			</div>
 
