--- a/app/templates/admin/show_admin.html
+++ b/app/templates/admin/show_admin.html
@@ -45,7 +45,7 @@
 				{% for t in tournaments -%}
 				<li class="list-group-item">
 					<h3>{{ t.name }}</h3> <p>{{ t.location }} {{ t.date_string}}</p>
-					<a class="btn btn-primary btn-md" href="/admin/update?tid={{t.tid}}" role="button">Update Scores</a>
+					<a class="btn btn-primary btn-md" href="/admin/t/{{t.short_name}}/scores" role="button">Update Scores</a>
 					<a class="btn btn-primary btn-md" href="/admin/t/{{t.short_name}}" role="button">Manage Tournament</a>
 				</li>
 				{% endfor %}
