--- a/app/templates/admin/show_update.html
+++ b/app/templates/admin/show_update.html
@@ -17,16 +17,16 @@ jQuery(document).ready(function($) {
 		var rows = $('#games tr:not(:first)');
 
 		if (me.value == "off"){
-			me.className = "btn btn-primary";
+			me.className = "btn btn-default";
 			me.value="on";
-			document.getElementById("toggleComplete-glyph").className = "glyphicon glyphicon-ok";
+			document.getElementById("toggleComplete-glyph").className = "glyphicon glyphicon-plus";
 
 			var played = rows.filter('.unplayed').show();
 			rows.not( played ).hide();
 		} else if (me.value == "on") {
-			me.className = "btn btn-default";
+			me.className = "btn btn-primary";
 			me.value="off";
-			document.getElementById("toggleComplete-glyph").className = "glyphicon glyphicon-remove";
+			document.getElementById("toggleComplete-glyph").className = "glyphicon glyphicon-ok";
 
 			rows.show();
 		}
@@ -53,10 +53,11 @@ jQuery(document).ready(function($) {
 	{%- endwith %}
 	<div class="alert alert-info" role="alert">
 		<p>To update a game, simply click on the row. Scores for games without both teams identified cannot be entered.</p>
+		<p>Completed games are hidden by default, click the Show Completed button bellow to see completed games</p>
 	</div>
 
-	<button id="toggleComplete" type="button" class="btn btn-default" value="off">
-		Hide Completed <span id="toggleComplete-glyph" class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+	<button id="toggleComplete" type="button" class="btn btn-default" value="on">
+		<span id="toggleComplete-glyph" class="glyphicon glyphicon-plus" aria-hidden="true"></span> Show Completed  
 	</button>
 
 	<table id=games class="table table-striped">
@@ -79,9 +80,9 @@ jQuery(document).ready(function($) {
 			<tr class="unplayed">
 			{% else %}
 				{% if game.score_b != "--" -%}
-				<tr class='clickableRow played' href="{{request.base_url}}?gid={{game.gid}}&tid={{tournament.tid}}">
+				<tr class='clickableRow played' style="display: none" href="{{request.base_url}}/{{game.gid}}">
 				{% else %}
-				<tr class='clickableRow unplayed' href="{{request.base_url}}?gid={{game.gid}}&tid={{tournament.tid}}">
+				<tr class='clickableRow unplayed' href="{{request.base_url}}/{{game.gid}}">
 				{%- endif %}
 			{%- endif %}
 				<td>{{ game.gid }}</td>
