Fix tournament view to show division if no pod

--- a/scoreboard/templates/show_tournament.html
+++ b/scoreboard/templates/show_tournament.html
@@ -123,6 +123,8 @@
 									<span class="game-line"> Pod: {{ game.pod }} </span>
 								{% elif game.pod %}
 									<span class="game-line"> Pod: {{ game.pod }} </span>
+								{% elif game.division %}
+									<span class="game-line"> Div: {{ game.division }} </span>
 								{% elif game.type == "CO" %}
 									<span class=game-description>Cross Over</span>
 								{% endif %}
