View player page and linked rosters
Added public page for viewing player and rosters now link to view player
page.

--- a/scoreboard/static/css/style.css
+++ b/scoreboard/static/css/style.css
@@ -137,6 +137,10 @@ img.flag-thumb {
 	max-width: 100%;
 }
 
+.roster-table a {
+	color: #333;
+}
+
 @media screen and (max-width: 1000px) {
 	#team_nav{
 		visibility: hidden;
