--- a/scoreboard/templates/nav_bar.html
+++ b/scoreboard/templates/nav_bar.html
@@ -67,6 +67,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="/">Home</a></li>
                             <li><a href="/faq">FAQ</a></li>
+                            <li><a href="/players">Players</a></li>
                             {% if tournament and tournament.is_active -%}
                             <li><a href="/admin/t/{{ tournament.short_name }}">Admin</a></li>
                             {% else %}
