Player page team list links directory to team
Update the team list on the player page to link to that team in the tournament and not just the tournament overall.

--- a/scoreboard/templates/show_player.html
+++ b/scoreboard/templates/show_player.html
@@ -69,7 +69,7 @@
         <tbody>
           {% for team in player.teams %}
           <tr>
-            <td> <a href="/t/{{team.t_short_name }}">{{ team.tournament }}</a></td>
+            <td> <a href="/t/{{team.t_short_name }}/team/{{team.team_id}}">{{ team.tournament }}</a></td>
             <td> {{ team.tournament_date }} </td>
             <td> <a href="/t/{{team.t_short_name }}/team/{{ team.team_id }}">{{ team.name }}</a></td>
             {% if team.placing %}
