--- a/scoreboard/templates/admin/admin_layout.html
+++ b/scoreboard/templates/admin/admin_layout.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- site specific css -->
-  	<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css">
+  	<link href="{{ url_for('static', filename='css/style.css') }}?v=1.2" rel="stylesheet" type="text/css">
       <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
       <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
       <!--[if lt IE 9]>
