--- a/scoreboard/templates/show_home.html
+++ b/scoreboard/templates/show_home.html
@@ -11,7 +11,9 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="page-header tournament-header">
-						<h1 class="tournament-title">UWHScores Home</h1>
+						<div class="row text-center">
+						<img class="mx-auto" src="/static/images/logo.png" alt="UWHScores Logo" height="200px">
+						</div>
 						<p class=lead>
 							Welcome to UWHScores.com, the source for underwater hockey tournament schedules, scores and standings.
 						<p>
