--- a/scoreboard/templates/layout.html
+++ b/scoreboard/templates/layout.html
@@ -20,6 +20,7 @@
     {% endif %}
 
     <meta name="author" content="">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16.png">
 	<title>Underwater Hockey Scores</title>
 
 
