--- a/scoreboard/templates/layout.html
+++ b/scoreboard/templates/layout.html
@@ -8,9 +8,9 @@
     {% if tournament -%}
     <meta name="description" content="UWHScores for {{ tournament.name }} - Follow game results and check updated standings throughout the day.">
     {% if team_info and team_info.flag_url %}
-    <meta property="og:image" content="https://uwhscores.com{{ team_info.flag_url }}" />
-    {% elif tournament.sm_logo -%}
-    <meta property="og:image" content="https://uwhscores.com{{ tournament.sm_logo }}" />
+    <meta property="og:image" content="https://uwhscores.com/{{ team_info.flag_url }}" />
+    {% elif tournament.banner -%}
+    <meta property="og:image" content="https://uwhscores.com/{{ tournament.banner }}" />
     {% else -%}
     <meta property="og:image" content="https://uwhscores.com/static/images/logo_og.png" />
     {%- endif %}
